# antioquia_smart_contracts

./: .gitignore  README.md  README_RU.md
donation/: Cargo.toml  README.md  deploy.sh  dev-deploy.sh
donation/src/: lib.rs
escrow/: .gitignore  Cargo.toml  README.md  deploy.sh
escrow/my_notes/: 1.txt
escrow/src/: lib.rs
lottery/: Cargo.toml  README.md  deploy.sh  dev-deploy.sh
lottery/src/: lib.rs
my_notes/: deploy_and_call.md  deploy_escrow.txt  escrow.txt
